@@ -313,6 +313,7 @@ PKCS12 *d2i_PKCS12_fp(FILE *fp, PKCS12 **p12);
 #define PKCS12_R_DECODE_ERROR				 101
 #define PKCS12_R_ENCODE_ERROR				 102
 #define PKCS12_R_ENCRYPT_ERROR				 103
+#define PKCS12_R_ERROR_SETTING_ENCRYPTED_DATA_TYPE	 120
 #define PKCS12_R_INVALID_NULL_ARGUMENT			 104
 #define PKCS12_R_INVALID_NULL_PKCS12_POINTER		 105
 #define PKCS12_R_IV_GEN_ERROR				 106
